# quantum_playground

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
pages/: 01_quantum_dot multi_n_1_ver8.py  15_quantum_dot multi_n_1_ver9.py  17_quantum_dot multi_n_1_ver11.py
